--- a/udong-street/package.json
+++ b/udong-street/package.json
@@ -11,8 +11,11 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
-    "react-live-clock": "^5.6.1",
+    "react-live-clock": "^5.7.0",
     "react-scripts": "5.0.0",
+    "react-scroll-horizontal": "^1.6.6",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
